--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+
 
   <link rel="stylesheet" type="text/css" href="../node_modules/font-awesome/css/font-awesome.css">
 
